# xfbin-lib-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: error.rs  lib.rs  utils.rs  xfbin.rs  xfbin_file.rs
src/nucc/: mod.rs  nucc_binary.rs  nucc_unknown.rs
src/nucc/nucc_anm/: clump.rs  curve.rs  entry.rs  mod.rs
src/nucc_chunk/: mod.rs  nucc_chunk_binary.rs  nucc_chunk_index.rs  nucc_chunk_null.rs  nucc_chunk_page.rs  nucc_chunk_unknown.rs
src/nucc_chunk/nucc_chunk_anm/: clump.rs  curve.rs  entry.rs  mod.rs
