[package]
name = "xfbin-lib-rs"
version = "0.1.0"
edition = "2021"
description = "A rust library for reading/writing CyberConnect2 games XFBIN files."
repository = "https://github.com/SutandoTsukai181/xfbin-lib-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
